force-app/main/default/objects/Brand_Variety__c/Brand_Variety__c.object-meta.xml
<CustomObject>
    <label>Brand Variety</label>
    <nameField>
        <label>Brand Variety Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brand Varieties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>