force-app/main/default/objects/Brand_Variety__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand</label>
    <referenceTo>Licensee_Brand__c</referenceTo>
    <relationshipLabel>Brand Varieties</relationshipLabel>
    <relationshipName>Brand_Varieties</relationshipName>
    <type>Lookup</type>
</CustomField>