force-app/main/default/objects/Brand_Variety__c/fields/Cyst_Gene__c.field-meta.xml
<CustomField>
    <fullName>Cyst_Gene__c</fullName>
    <label>Cyst Gene</label>
    <length>40</length>
    <type>Text</type>
</CustomField>