force-app/main/default/objects/Brand_Variety__c/fields/GDM_Variety__c.field-meta.xml
<CustomField>
    <fullName>GDM_Variety__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GDM Variety</label>
    <referenceTo>Variedad__c</referenceTo>
    <relationshipLabel>Brand Varieties</relationshipLabel>
    <relationshipName>Brand_Varieties</relationshipName>
    <type>Lookup</type>
</CustomField>