force-app/main/default/objects/Brand_Variety__c/fields/Genetic_Provider_Variety__c.field-meta.xml
<CustomField>
    <fullName>Genetic_Provider_Variety__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Genetic Provider Variety</label>
    <referenceTo>Genetic_Provider_Variety__c</referenceTo>
    <relationshipLabel>Brand Varieties</relationshipLabel>
    <relationshipName>Brand_Varieties</relationshipName>
    <type>Lookup</type>
</CustomField>