force-app/main/default/objects/Brand_Variety__c/fields/IDC__c.field-meta.xml
<CustomField>
    <fullName>IDC__c</fullName>
    <label>IDC</label>
    <length>40</length>
    <type>Text</type>
</CustomField>