force-app/main/default/objects/Brand_Variety__c/fields/Launch_Year__c.field-meta.xml
<CustomField>
    <fullName>Launch_Year__c</fullName>
    <label>Launch Year</label>
    <length>20</length>
    <type>Text</type>
</CustomField>