force-app/main/default/objects/Brand_Variety__c/fields/Maturity__c.field-meta.xml
<CustomField>
    <fullName>Maturity__c</fullName>
    <label>Maturity</label>
    <length>10</length>
    <type>Text</type>
</CustomField>