force-app/main/default/objects/Brand_Variety__c/fields/Rps_Gene__c.field-meta.xml
<CustomField>
    <fullName>Rps_Gene__c</fullName>
    <description>RPS1a-RPS1c-RPS1k-RPS3a-NG</description>
    <inlineHelpText>RPS1a-RPS1c-RPS1k-RPS3a-NG</inlineHelpText>
    <label>Rps Gene</label>
    <length>40</length>
    <type>Text</type>
</CustomField>