force-app/main/default/objects/Brand_Variety__c/fields/Scale__c.field-meta.xml
<CustomField>
    <fullName>Scale__c</fullName>
    <label>Scale</label>
    <length>10</length>
    <type>Text</type>
</CustomField>