force-app/main/default/objects/Brand_Variety__c/fields/STS__c.field-meta.xml
<CustomField>
    <fullName>STS__c</fullName>
    <label>STS</label>
    <length>10</length>
    <type>Text</type>
</CustomField>