force-app/main/default/objects/Brand_Variety__c/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <label>Technology</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CONVENTIONAL</fullName>
            </value>
            <value>
                <fullName>ENLIST</fullName>
            </value>
            <value>
                <fullName>GT</fullName>
            </value>
            <value>
                <fullName>LL</fullName>
            </value>
            <value>
                <fullName>LLGT27</fullName>
            </value>
            <value>
                <fullName>ORGANIC</fullName>
            </value>
            <value>
                <fullName>RR</fullName>
            </value>
            <value>
                <fullName>RR2Y</fullName>
            </value>
            <value>
                <fullName>XTEND</fullName>
            </value>
            <value>
                <fullName>XTENDFLEX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>