force-app/main/default/objects/Brand_Variety__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Brand__c</columns>
    <columns>GDM_Variety__c</columns>
    <columns>Maturity__c</columns>
    <columns>MG__c</columns>
    <columns>Technology__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>STS__c</field>
        <operation>notEqual</operation>
        <value>,X</value>
    </filters>
    <label>All</label>
</ListView>