force-app/main/default/objects/Brand_Variety__c/listViews/DONMARIO.listView-meta.xml
<ListView>
    <fullName>DONMARIO</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Brand__c</columns>
    <columns>GDM_Variety__c</columns>
    <columns>Maturity__c</columns>
    <columns>MG__c</columns>
    <columns>Technology__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Brand__c</field>
        <operation>equals</operation>
        <value>DONMARIO</value>
    </filters>
    <label>DONMARIO</label>
</ListView>