force-app/main/default/objects/Brand_Variety__c/listViews/GDM_commercials.listView-meta.xml
<ListView>
    <fullName>GDM_commercials</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Brand__c</columns>
    <columns>GDM_Variety__c</columns>
    <columns>Maturity__c</columns>
    <columns>MG__c</columns>
    <columns>Technology__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>GDM_Variety__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>GDM commercials</label>
</ListView>